# budbuk

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONNECTORS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  codecov.yml  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
control-panel/: README.md
control-panel/server/: Cargo.toml
control-panel/server/src/: crypto.rs  main.rs  sql.rs
control-panel/web/: index.html  package-lock.json  package.json
control-panel/web/src/: App.tsx  api.ts  connectorMeta.ts  styles.css
crates/activecampaign-connector/: Cargo.toml
crates/activecampaign-connector/src/: lib.rs
crates/asana-connector/: Cargo.toml
crates/asana-connector/src/: lib.rs
crates/auth0-connector/: Cargo.toml
crates/auth0-connector/src/: lib.rs
crates/bigcommerce-connector/: Cargo.toml
crates/bigcommerce-connector/src/: lib.rs
crates/bitbucket-connector/: Cargo.toml
crates/bitbucket-connector/src/: lib.rs
crates/box-connector/: Cargo.toml
crates/box-connector/src/: lib.rs
crates/calendly-connector/: Cargo.toml
crates/calendly-connector/src/: lib.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  options.rs
crates/catalog/tests/: cross_connector.rs
crates/chargebee-connector/: Cargo.toml
crates/chargebee-connector/src/: lib.rs
crates/confluence-connector/: Cargo.toml
crates/confluence-connector/src/: lib.rs
crates/connector-sdk/: Cargo.toml
crates/connector-sdk/src/: cache.rs  connector.rs  ddl.rs  error.rs  lib.rs  types.rs
crates/contentful-connector/: Cargo.toml
crates/contentful-connector/src/: lib.rs
crates/datadog-connector/: Cargo.toml
crates/datadog-connector/src/: lib.rs
crates/docusign-connector/: Cargo.toml
crates/docusign-connector/src/: lib.rs
crates/freshdesk-connector/: Cargo.toml
crates/freshdesk-connector/src/: lib.rs
crates/gcalendar-connector/: Cargo.toml
crates/gcalendar-connector/src/: lib.rs
crates/gdrive-connector/: Cargo.toml
crates/gdrive-connector/src/: lib.rs
crates/github-connector/: Cargo.toml
crates/github-connector/examples/: print_spec.rs
crates/github-connector/src/: cli.rs  lib.rs  main.rs
crates/gitlab-connector/: Cargo.toml
crates/gitlab-connector/src/: lib.rs
crates/grafana-connector/: Cargo.toml
crates/grafana-connector/src/: lib.rs
crates/granola-connector/: Cargo.toml
crates/granola-connector/src/: lib.rs
crates/graphql-connector/: Cargo.toml
crates/graphql-connector/src/: cli.rs  connector.rs  introspect.rs  lib.rs  main.rs  spec.rs
crates/graphql-fdw/: .gitignore  Cargo.toml  graphql_fdw.control
crates/graphql-fdw/sql/: example.sql
crates/graphql-fdw/src/: lib.rs
crates/greenhouse-connector/: Cargo.toml
crates/greenhouse-connector/src/: lib.rs
crates/hubspot-connector/: Cargo.toml
crates/hubspot-connector/src/: lib.rs
crates/huggingface-connector/: Cargo.toml
crates/huggingface-connector/src/: lib.rs
crates/intercom-connector/: Cargo.toml
crates/intercom-connector/src/: lib.rs
crates/jira-connector/: Cargo.toml
crates/jira-connector/src/: cli.rs  client.rs  jql.rs  lib.rs  main.rs  mock.rs
crates/jira-connector/tests/: http.rs
crates/jira-fdw/: .gitignore  Cargo.toml  jira_fdw.control
crates/jira-fdw/.cargo/: config.toml
crates/jira-fdw/sql/: example.sql
crates/jira-fdw/src/: lib.rs
crates/jsm-connector/: Cargo.toml
crates/jsm-connector/src/: lib.rs
crates/klaviyo-connector/: Cargo.toml
crates/klaviyo-connector/src/: lib.rs
crates/lever-connector/: Cargo.toml
crates/lever-connector/src/: lib.rs
crates/mailchimp-connector/: Cargo.toml
crates/mailchimp-connector/src/: lib.rs
crates/monday-connector/: Cargo.toml
crates/monday-connector/src/: lib.rs
crates/msgraph-connector/: Cargo.toml
crates/msgraph-connector/src/: lib.rs
crates/notion-connector/: Cargo.toml
crates/notion-connector/src/: lib.rs
crates/okta-connector/: Cargo.toml
crates/okta-connector/src/: lib.rs
crates/opsgenie-connector/: Cargo.toml
crates/opsgenie-connector/src/: lib.rs
crates/pagerduty-connector/: Cargo.toml
crates/pagerduty-connector/src/: lib.rs
crates/paypal-connector/: Cargo.toml
crates/paypal-connector/src/: lib.rs
crates/pipedrive-connector/: Cargo.toml
crates/pipedrive-connector/src/: lib.rs
crates/recurly-connector/: Cargo.toml
crates/recurly-connector/src/: lib.rs
crates/rest-connector/: Cargo.toml
crates/rest-connector/examples/: import_openapi.rs  spec_json.rs
crates/rest-connector/src/: cli.rs  connector.rs  lib.rs  main.rs  openapi.rs  spec.rs
crates/rest-connector/tests/: http.rs
crates/rest-fdw/: Cargo.toml  rest_fdw.control
crates/rest-fdw/sql/: example.sql
crates/rest-fdw/src/: lib.rs
crates/sendgrid-connector/: Cargo.toml
crates/sendgrid-connector/src/: lib.rs
crates/sentry-connector/: Cargo.toml
crates/sentry-connector/src/: lib.rs
crates/servicenow-connector/: Cargo.toml
crates/servicenow-connector/src/: lib.rs
crates/shopify-connector/: Cargo.toml
crates/shopify-connector/src/: lib.rs
crates/slack-connector/: Cargo.toml
crates/slack-connector/src/: lib.rs
crates/smartsheet-connector/: Cargo.toml
crates/smartsheet-connector/src/: lib.rs
crates/square-connector/: Cargo.toml
crates/square-connector/src/: lib.rs
crates/stripe-connector/: Cargo.toml  stripe_spec.json
crates/stripe-connector/src/: lib.rs
crates/surveymonkey-connector/: Cargo.toml
crates/surveymonkey-connector/src/: lib.rs
crates/twilio-connector/: Cargo.toml
crates/twilio-connector/src/: lib.rs
crates/typeform-connector/: Cargo.toml
crates/woocommerce-connector/: Cargo.toml
crates/xero-connector/: Cargo.toml
crates/xero-connector/src/: lib.rs
crates/zendesk-connector/: Cargo.toml
crates/zendesk-connector/src/: lib.rs
crates/zohocrm-connector/: Cargo.toml
crates/zoom-connector/: Cargo.toml
docs/: configuration.md
(+19 files in other folders)
