# The workspace root. It doesn't contain code itself — it lists the member
# crates and shares dependency versions across them.
[workspace]
resolver = "2"
members = [
    "crates/connector-sdk",
    "crates/jira-connector",
    "crates/rest-connector",
    "crates/github-connector",
    "crates/stripe-connector",
    "crates/gitlab-connector",
    "crates/zendesk-connector",
    "crates/pagerduty-connector",
    "crates/freshdesk-connector",
    "crates/contentful-connector",
    "crates/graphql-connector",
    "crates/asana-connector",
    "crates/shopify-connector",
    "crates/intercom-connector",
    "crates/pipedrive-connector",
    "crates/sentry-connector",
    "crates/hubspot-connector",
    "crates/slack-connector",
    "crates/mailchimp-connector",
    "crates/zoom-connector",
    "crates/servicenow-connector",
    "crates/okta-connector",
    "crates/auth0-connector",
    "crates/twilio-connector",
    "crates/typeform-connector",
    "crates/opsgenie-connector",
    "crates/smartsheet-connector",
    "crates/calendly-connector",
    "crates/bitbucket-connector",
    "crates/square-connector",
    "crates/recurly-connector",
    "crates/confluence-connector",
    "crates/woocommerce-connector",
    "crates/bigcommerce-connector",
    "crates/zohocrm-connector",
    "crates/activecampaign-connector",
    "crates/surveymonkey-connector",
    "crates/sendgrid-connector",
    "crates/greenhouse-connector",
    "crates/lever-connector",
    "crates/chargebee-connector",
    "crates/paypal-connector",
    "crates/docusign-connector",
    "crates/box-connector",
    "crates/jsm-connector",
    "crates/grafana-connector",
    "crates/klaviyo-connector",
    "crates/datadog-connector",
    "crates/xero-connector",
    "crates/msgraph-connector",
    "crates/gdrive-connector",
    "crates/gcalendar-connector",
    "crates/notion-connector",
    "crates/catalog",
]
# The pgrx FDW extension is excluded from the default workspace: it can't be
# built with plain `cargo build` (it needs a `pgXX` feature and links against
# PostgreSQL) and is built/tested via `cargo pgrx`. Keeping it out preserves the
# engine's `cargo build/test/llvm-cov` (and the 100%-coverage gate).
exclude = [
    "crates/jira-fdw",
    "crates/rest-fdw",
    "crates/graphql-fdw",
]

# Settings every member crate can inherit, so we set them in one place.
[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.82.0"
license = "MIT OR Apache-2.0"
authors = ["The BudBuk Authors"]
repository = "https://github.com/budbuk/budbuk"
homepage = "https://github.com/budbuk/budbuk"
keywords = ["postgresql", "fdw", "jira", "connector", "data-integration"]
categories = ["database", "api-bindings"]

# Shared dependency versions. Member crates opt in with `foo.workspace = true`.
[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
# TLS via rustls (pure Rust), NOT native-tls. Apple's Security.framework is
# fork-unsafe and segfaults inside forked PostgreSQL backends during the TLS
# handshake; rustls has no such dependency. See deny.toml's ban on native-tls.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
    "charset",
    "rustls-tls",
] }
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Dev/test-only shared versions.
wiremock = "0.6"
serial_test = "3"

# Release profile: optimize hard, strip symbols for lean binaries.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
