[package]
name = "catalog"
description = "BudBuk connector catalog: builds a SourceSpec for a named built-in connector (stripe, github, …) from server options, so standard connectors mount out-of-the-box."
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rest-connector = { path = "../rest-connector" }
github-connector = { path = "../github-connector" }
stripe-connector = { path = "../stripe-connector" }
gitlab-connector = { path = "../gitlab-connector" }
zendesk-connector = { path = "../zendesk-connector" }
pagerduty-connector = { path = "../pagerduty-connector" }
freshdesk-connector = { path = "../freshdesk-connector" }
contentful-connector = { path = "../contentful-connector" }
asana-connector = { path = "../asana-connector" }
shopify-connector = { path = "../shopify-connector" }
intercom-connector = { path = "../intercom-connector" }
pipedrive-connector = { path = "../pipedrive-connector" }
sentry-connector = { path = "../sentry-connector" }
thiserror.workspace = true

[dev-dependencies]
connector-sdk = { path = "../connector-sdk" }
serde_json.workspace = true
wiremock.workspace = true
tokio.workspace = true
