[package]
name = "catalog"
description = "BudBuk connector catalog: builds a SourceSpec for a named built-in connector (stripe, github, …) from server options, so standard connectors mount out-of-the-box."
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rest-connector = { path = "../rest-connector" }
github-connector = { path = "../github-connector" }
stripe-connector = { path = "../stripe-connector" }
gitlab-connector = { path = "../gitlab-connector" }
zendesk-connector = { path = "../zendesk-connector" }
pagerduty-connector = { path = "../pagerduty-connector" }
freshdesk-connector = { path = "../freshdesk-connector" }
contentful-connector = { path = "../contentful-connector" }
asana-connector = { path = "../asana-connector" }
shopify-connector = { path = "../shopify-connector" }
intercom-connector = { path = "../intercom-connector" }
pipedrive-connector = { path = "../pipedrive-connector" }
sentry-connector = { path = "../sentry-connector" }
hubspot-connector = { path = "../hubspot-connector" }
slack-connector = { path = "../slack-connector" }
mailchimp-connector = { path = "../mailchimp-connector" }
zoom-connector = { path = "../zoom-connector" }
servicenow-connector = { path = "../servicenow-connector" }
okta-connector = { path = "../okta-connector" }
auth0-connector = { path = "../auth0-connector" }
twilio-connector = { path = "../twilio-connector" }
typeform-connector = { path = "../typeform-connector" }
opsgenie-connector = { path = "../opsgenie-connector" }
smartsheet-connector = { path = "../smartsheet-connector" }
calendly-connector = { path = "../calendly-connector" }
bitbucket-connector = { path = "../bitbucket-connector" }
square-connector = { path = "../square-connector" }
recurly-connector = { path = "../recurly-connector" }
confluence-connector = { path = "../confluence-connector" }
woocommerce-connector = { path = "../woocommerce-connector" }
bigcommerce-connector = { path = "../bigcommerce-connector" }
zohocrm-connector = { path = "../zohocrm-connector" }
activecampaign-connector = { path = "../activecampaign-connector" }
surveymonkey-connector = { path = "../surveymonkey-connector" }
sendgrid-connector = { path = "../sendgrid-connector" }
greenhouse-connector = { path = "../greenhouse-connector" }
lever-connector = { path = "../lever-connector" }
chargebee-connector = { path = "../chargebee-connector" }
paypal-connector = { path = "../paypal-connector" }
docusign-connector = { path = "../docusign-connector" }
box-connector = { path = "../box-connector" }
jsm-connector = { path = "../jsm-connector" }
grafana-connector = { path = "../grafana-connector" }
klaviyo-connector = { path = "../klaviyo-connector" }
datadog-connector = { path = "../datadog-connector" }
xero-connector = { path = "../xero-connector" }
msgraph-connector = { path = "../msgraph-connector" }
gdrive-connector = { path = "../gdrive-connector" }
gcalendar-connector = { path = "../gcalendar-connector" }
notion-connector = { path = "../notion-connector" }
huggingface-connector = { path = "../huggingface-connector" }
granola-connector = { path = "../granola-connector" }
thiserror.workspace = true

[dev-dependencies]
connector-sdk = { path = "../connector-sdk" }
serde_json.workspace = true
wiremock.workspace = true
tokio.workspace = true
